welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: not found: value ||
  if(aSmile && bSmile)||(!aSmile && bSmile)
                      ^monkeyTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(aSmile && bSmile)||(!aSmile && bSmile)
  ^